--- a/elements.html
+++ b/elements.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						
-						<a href="C:\Users\User\Downloads\Samindi De Silva.pdf" class="logo">Resume</a>
+						<a href="Samindi De Silva.pdf" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
