--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="C:\Users\User\Downloads\Samindi De Silva.pdf" class="logo">Resume</a>
+						<a href="Samindi De Silva.pdf" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -53,7 +53,7 @@
 								<h4>SECONDARY EDUCATION</h4>
                                                                 <p> I studied for Ordinaly level and Advanced level at Devi Balika Vidyalaya; Colombo 07.</p>
                                                        
-                                                                <p><b>ADVANCED LEVEL</b><br>Year 2019<br> Biology - c<br> Chemistry - C<br> Physics - S<br><br><b> ORDINARY LEVEL</b><br>Year 2016<br>Maths - A <br>Science - A<br>English - A <br> Sinhala - A<br>
+                                                                <p><b>ADVANCED LEVEL</b><br>Year 2019<br> Biology - c<br> Chemistry - S<br> Physics - S<br><br><b> ORDINARY LEVEL</b><br>Year 2016<br>Maths - A <br>Science - A<br>English - A <br> Sinhala - A<br>
                                                                  Buddhism - A <br>History - A<br> Commerce - A<br> Health - A <br> Drama - A 
 
 					
